--- a/neo-config-dev.properties
+++ b/neo-config-dev.properties
@@ -1,1 +1,17 @@
-asagagahhaahha
+{
+    "name": "neo-config", 
+    "profiles": [
+        "dev"
+    ], 
+    "label": null, 
+    "version": null, 
+    "state": null, 
+    "propertySources": [
+        {
+            "name": "https://github.com/ityouknow/spring-cloud-starter/config-repo/neo-config-dev.properties", 
+            "source": {
+                "neo.hello": "hello im dev"
+            }
+        }
+    ]
+}
